# pysql-runner

./: .gitignore  pyproject.toml  readme.md
pysql/: cli.py  preset.py
pysql/drivers/: oracledb.py
pysql/parser/: lang.py  parse.py  parser.out  parsetab.py
tests/: test_lang.py
