[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pysql-runner"
version = "0.0.1"
dependencies = [
    "keyring>=25.4.1",
    "tabulate>=0.9",
    "ply>=3.11"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3"
]

[project.entry-points."pysql.drivers"]
oracledb = "pysql.drivers.oracledb:OracleDriver"

[project.scripts]
pysql = "pysql.cli:main"